LDADD = $(CONCORDE_LIB) $(top_builddir)/lib/libarrow.a
AM_CPPFLAGS = $(CONCORDE_CFLAGS) -I$(top_builddir)/lib -g -Wall

bin_PROGRAMS = bbssp btsp histogram_data linkern tsp

bbssp_SOURCES = bbssp.c
btsp_SOURCES = btsp.c
histogram_data_SOURCES = histogram_data.c
linkern_SOURCES = linkern.c
tsp_SOURCES = tsp.c