LDADD = $(CONCORDE_LIB) $(top_builddir)/lib/libarrow.a
AM_CPPFLAGS = $(CONCORDE_CFLAGS) -I$(top_builddir)/lib -g -Wall

bin_PROGRAMS = bbssp btsp cbtsp histogram_data linkern tour_info tsp

bbssp_SOURCES = bbssp.c
btsp_SOURCES = btsp.c
cbtsp_SOURCES = cbtsp.c
histogram_data_SOURCES = histogram_data.c
linkern_SOURCES = linkern.c
tour_info_SOURCES = tour_info.c
tsp_SOURCES = tsp.c